<resources>
    <string name="app_name">ContactsApp</string>
    <string name="contact">Contacts</string>
    <string name="action_add">Add</string>

    <string name="adapter_item">%1$s: %2$s</string>
    <string name="name">%1$s %2$s</string>
    <string name="retry">Retry</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="favourite">Favourite</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

</resources>