<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/flMessage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_shape"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_message_24" />
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:layout_below="@id/flMessage"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/flCall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_shape"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_call_24" />
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:layout_below="@id/flCall"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/flEmail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_shape"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_email_24" />
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_below="@id/flEmail"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/flFavourite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_shape"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_star_border_24" />
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite"
            android:layout_below="@id/flFavourite"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</LinearLayout>
